--- a/views/login.ejs
+++ b/views/login.ejs
@@ -23,11 +23,11 @@
             <form action="/login" method="post">
                 <div class="form-group">
                     <label>Username</label>
-                    <input type="text" class="form-control" name="username">
+                    <input type="text" class="form-control" value="dvd928" name="username">
                 </div>
                 <div class="form-group">
                     <label>Password</label>
-                    <input type="password" class="form-control" name="password">
+                    <input type="password" class="form-control" value="dvd123" name="password">
                 </div>
                 <div class="form-group">
                     <label>Remember Me</label>
