--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -28,6 +28,8 @@
 						<strong>id</strong>: <%= user.id %><br>
 						<strong>username</strong>: <%= user.username %><br>
 						<strong>password</strong>: <%= user.password %>
+						<strong>email</strong>: <%= user.email %><br>
+						<strong>Course</strong>: <%= course.courseName %>
 					</p>
 
 			</div>
