--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,14 +2,25 @@
 <!doctype html>
 <html>
 <head>
-	<title>Node Authentication</title>
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
-	<style>
-		body 		{ padding-top:80px; word-wrap:break-word; }
-	</style>
+	<title>TestV2</title>
+	<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css"> <!-- load bootstrap css -->
+	<link rel="stylesheet" href="/fonts/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css"><!-- load fontawesome -->
+    
+    <link rel="icon" href="images/raspberry.png" type="image/png">
 </head>
 <body>
+
+	<nav class="navbar sticky-top navbar-light bg-light">
+		<!-- <ul class="nav navbar-nav">
+			<li class="active"><a href="#">Home</a></li>
+			<li><a href="#">Page 1</a></li>
+			<li><a href="#">Page 2</a></li>
+		</ul> -->
+		<ul class="nav navbar-nav navbar-right">
+			<li><a class="navbar-brand nav-link" href="/"><span class="fas fa-sign-out-alt "></span> Logout</a></li>
+		</ul>
+	</nav>
+
 <div class="container">
 
 	<div class="page-header text-center">
