--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,45 +2,53 @@
 <!doctype html>
 <html>
 <head>
-	<title>Node Authentication</title>
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css"> <!-- load bootstrap css -->
-	<link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"> <!-- load fontawesome -->
+	<title>TestV2</title>
+	<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css"> <!-- load bootstrap css -->
+	<link rel="stylesheet" href="/fonts/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css"><!-- load fontawesome -->
+	
+	<link rel="icon" href="images/raspberry.png" type="image/png">
+
 	<style>
-		body 		{ padding-top:80px; }
+		body 		{ padding-top:20px; }
 	</style>
 </head>
 <body>
-<div class="container">
-
-<div class="col-sm-6 col-sm-offset-3">
-
-	<h1><span class="fa fa-sign-in"></span> Signup</h1>
-
-	<!-- show any messages that come back with authentication -->
-	<% if (message.length > 0) { %>
-		<div class="alert alert-danger"><%= message %></div>
-	<% } %>
-
-	<!-- LOGIN FORM -->
-	<form action="/signup" method="post">
-		<div class="form-group">
-			<label>Username</label>
-			<input type="text" class="form-control" name="username">
+	
+	<div class="container-fluid text-center" >
+			<h1 class="display-1">Test<strong>V2</strong></h1>
+			<h1><span class="fa fa-sign-in"></span>Register</h1>
 		</div>
-		<div class="form-group">
-			<label>Password</label>
-			<input type="password" class="form-control" name="password">
+	
+		<!-- show any messages that come back with authentication -->
+		<% if (message.length > 0) { %>
+			<div class="alert alert-danger"><%= message %></div>
+		<% } %>
+	
+		<div class="mx-auto" style="width: 300px;">
+			<div class="col-sm">
+	
+	
+			<form action="/signup" method="post">
+				<div class="form-group">
+					<label>Username</label>
+					<input type="text" class="form-control" name="username">
+				</div>
+				<!-- <div class="form-group">
+					<label>Email</label>
+					<input type="text" class="form-control" name="email">
+				</div> -->
+				<div class="form-group">
+					<label>Password</label>
+					<input type="password" class="form-control" name="password">
+				</div>
+	
+				<button type="submit" class="btn btn-warning btn-lg w-100">Signup</button>
+			</form>
+			<hr>
+	
+			<p>Already have an account? <a href="/login">Login</a></p>
+			</div>
 		</div>
-
-		<button type="submit" class="btn btn-warning btn-lg">Signup</button>
-	</form>
-
-	<hr>
-
-	<p>Already have an account? <a href="/login">Login</a></p>
-	<p>Or go <a href="/">home</a>.</p>
-
-</div>
 
 </div>
 </body>
