--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -34,7 +34,7 @@
 <div class="container">
 
 	<div class="page-header text-center">
-		<h1><span class="fa fa-anchor"></span> Profile Page</h1>
+		<h1><span class="fa fa-anchor"></span> Profile</h1>
 	</div>
 
 	<div class="row">
@@ -47,12 +47,11 @@
 					<p>
 						<strong>id</strong>: <%= user.id %><br>
 						<strong>username</strong>: <%= user.username %><br>
-						<strong>password</strong>: <%= user.password %>
+						<!-- <strong>password</strong>: <%= user.password %> -->
 						<strong>email</strong>: <%= user.email %><br>
 						<strong>Course</strong>:
-						<% for(var i=0; i<course.length;i++){ %>
-									,								
-									<%= course[i].courseName %>
+						<% for(var i=0; i<course.length;i++){ %>						
+							<a class="btn btn-outline-primary" href=<%= "course/" + course[i].courseName %>><%= course[i].courseName %></a>
 						<%} %>
 					</p>
 
