--- a/views/course.ejs
+++ b/views/course.ejs
@@ -1,14 +1,52 @@
-<table>
-    <tr>
-        <th>Course Name</th>
-        <th>Course Description</th>
-    </tr>
-    <% for(var i=0; i<course.length;i++){ %>
-        <tr>
-            <td> <a href="/courses/add/<%= course[i].COURSE_ID %>"><%= course[i].courseName %></a></td>
-            <td><%= course[i].courseDescription %></td>
-        </tr> 
-    <%} %>
-
+<!-- views/profile.ejs -->
+<!doctype html>
+<html>
+<head>
+	<title>TestV2</title>
+    <script src="/scripts/jquery-3.2.1.min.js"></script>
+	<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css"> <!-- load bootstrap css -->
+	<link rel="stylesheet" href="/fonts/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css"><!-- load fontawesome -->
     
-</table>
+    <script src="/bootstrap/js/bootstrap.min.js"></script>
+    <link rel="icon" href="images/raspberry.png" type="image/png">
+</head>
+<body>
+
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+			<li class="nav-item active">
+					<a class="nav-link" href="/profile">Profile <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Courses <span class="sr-only">(current)</span></a>
+			</li>
+			</ul>
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="/logout"><span class="fas fa-sign-out-alt "></span> Logout</a></li>
+			</ul>
+		</div>
+	</nav>
+
+
+<table>
+        <tr>
+            <th>Course Name</th>
+            <th>Course Description</th>
+        </tr>
+        <% for(var i=0; i<course.length;i++){ %>
+            <tr>
+                <td> <a href="/courses/add/<%= course[i].COURSE_ID %>"><%= course[i].courseName %></a></td>
+                <td><%= course[i].courseDescription %></td>
+            </tr> 
+        <%} %>
+    
+        
+    </table>
+</body>
+</html>
+
+
