--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -18,16 +18,20 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
-			<li class="nav-item active">
-					<a class="nav-link" href="profile">Profile <span class="sr-only">(current)</span></a>
+				<li class="nav-item active">
+						<a class="nav-link" href="profile">Profile <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item">
 					<% if(user.lecturer) { %>
 						<a class="nav-link" href="#" data-toggle="modal" data-target="#createCourse" > Create Course <span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="/courses" data-toggle="modal" data-target="#addCourse" id="addCourseBut"> Add Course <span class="sr-only">(current)</span></a>
+					</li>
 					<%} else {%>
 						<a class="nav-link" href="/courses" data-toggle="modal" data-target="#addCourse" id="addCourseBut"> Add Course <span class="sr-only">(current)</span></a>
+					</li>
 					<%}	%>
-			</li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="/logout"><span class="fas fa-sign-out-alt "></span> Logout</a></li>
