--- a/views/courseView.ejs
+++ b/views/courseView.ejs
@@ -1,20 +1,53 @@
+<!-- views/profile.ejs -->
+<!doctype html>
+<html>
+<head>
+	<title>TestV2</title>
+    <script src="/scripts/jquery-3.2.1.min.js"></script>
+	<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css"> <!-- load bootstrap css -->
+	<link rel="stylesheet" href="/fonts/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css"><!-- load fontawesome -->
+    
+    <script src="/bootstrap/js/bootstrap.min.js"></script>
+    <link rel="icon" href="images/raspberry.png" type="image/png">
+</head>
+<body>
 
+    <!-- navbar -->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item active">
+						<a class="nav-link" href="profile">Profile <span class="sr-only">(current)</span></a>
+				</li>
+			</ul>
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="/logout"><span class="fas fa-sign-out-alt "></span> Logout</a></li>
+			</ul>
+		</div>
+	</nav>
 
-    <%= course[0].courseName %><br>
-    <%= course[0].courseDescription %>
-    <table>
+    <div class="page-header text-center">
+        <h1><%= course[0].courseName %></h1>
+        <p class="font-italic"><%= course[0].courseDescription %></p>
+    </div>
+
+    <!-- table -->
+    <table class="table">
+        <tr>
+            <th>Lesson</th>
+            <th>Description</th>
+        </tr>
+        <% for(var i=0; i<course.length;i++){ %>
             <tr>
-                <th>Lesson</th>
-                <th>Description</th>
-            </tr>
-            <% for(var i=0; i<course.length;i++){ %>
-                <tr>
-                    <td><%= course[i].LESSON_NAME %></td>
-                    <td><%= course[i].LESSON_DESCRIPTION %></td>
-                    <td><%= course[0].LESSON_MATERIAL %></td>
-                </tr> 
-            <%} %>
-        
-            
-        </table>
+                <td><%= course[i].LESSON_NAME %></td>
+                <td><%= course[i].LESSON_DESCRIPTION %></td>
+                <td><%= course[0].LESSON_MATERIAL %></td>
+            </tr> 
+        <%} %>
+    </table>
 
+</body>
+</html>
