--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -55,14 +55,10 @@
 			<!-- LOCAL INFORMATION -->
 			<div class="col-sm-6">
 				<div class="well">
-					<h3><span class="fa fa-user"></span> Local</h3>
+					<h3><span class="fa fa-user"></span> Welcome <%= user.username %></h3>
 
 						<p>
-							<strong>id</strong>: <%= user.id %><br>
-							<strong>username</strong>: <%= user.username %><br>
-							<!-- <strong>password</strong>: <%= user.password %> -->
-							<strong>email</strong>: <%= user.email %><br>
-							<strong>Course</strong>:
+							<strong>My Courses</strong>:
 							<% for(var i=0; i<course.length;i++){ %>						
 								<a class="btn btn-outline-primary" href=<%= "course/" + course[i].courseName %>><%= course[i].courseName %></a>
 							<%} %>
