--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -111,7 +111,7 @@
 								</div>
 								<div class="form-group">
 										<label>Course Description</label><br>
-										<textarea  name="courseDescription"> </textarea>
+										<textarea  name="courseDescription" class="w-100"> </textarea>
 								</div>
 						
 								<button type="submit" class="btn btn-warning btn-lg w-100">Create</button>
