--- a/views/courseEdit.ejs
+++ b/views/courseEdit.ejs
@@ -35,23 +35,28 @@
     </div>
 
     <!-- table -->
-    <table class="table">
-        <tr>
-            <th>Lesson</th>
-            <th>Description</th>
-        </tr>
-        <% for(var i=0; i<course.length;i++){ %>
+    <table class="table table-hover">
+        <thead>
             <tr>
-                <td><%= course[i].LESSON_NAME %></td>
-                <td><%= course[i].LESSON_DESCRIPTION %></td>
-                <td><%= course[0].LESSON_MATERIAL %></td>
+                <th>Lesson</th>
+                <th>Description</th>
+                <th>Material</th>
+            </tr>
+        </thead>
+        <tbody>
+            <% for(var i=0; i<course.length;i++){ %>
+                <tr>
+                    <td><button class="btn btn-primary-outline" data-toggle="modal" data-target="#editLesson"><span class="fas fa-edit text-left"></span>  <%= course[i].LESSON_NAME %></td></button> 
+                    <td><%= course[i].LESSON_DESCRIPTION %></td>
+                    <td><%= course[0].LESSON_MATERIAL %></td>
+                </tr> 
+            <%} %>
+            <tr>
+                <td></td>
+                <td></td>
+                <td><button class="btn btn-primary" data-toggle="modal" data-target="#createLesson" >Create Lesson</button></td>
             </tr> 
-        <%} %>
-        <tr>
-            <td><button class="btn btn-primary" data-toggle="modal" data-target="#createLesson" >Create Lesson</button></td>
-            <td></td>
-            <td></td>
-        </tr> 
+        </tbody>
     </table>
 
     <!-- Create Lesson Modal -->
@@ -83,5 +88,36 @@
             </div>
         </div>
     </div>
+
+    
+    <!-- Edit Lesson Modal -->
+    <div class="modal fade" id="editLesson" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Edit Lesson</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form action="#" method="post">
+                        <div class="form-group">
+                            <label>Lesson Name</label><br>
+                            <input type="text" class="form-control" name="lessonName">
+                        </div>
+                        <div class="form-group">
+                            <label>Course Description</label><br>
+                            <textarea  name="lessonDescription" class="w-100"> </textarea>
+                        </div>
+                        <button type="submit" class="btn btn-warning btn-lg w-100">Save</button>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                </div>
+                </div>
+            </div>
+        </div>
 </body>
 </html>
