gradebook added and lesson number added

--- a/views/courseView.ejs
+++ b/views/courseView.ejs
@@ -44,7 +44,7 @@
             <tr>
                 <td><%= course[i].LESSON_NAME %></td>
                 <td><%= course[i].LESSON_DESCRIPTION %></td>
-                <td><%= course[0].LESSON_MATERIAL %></td>
+                <td><%= course[i].LESSON_MATERIAL %></td>
             </tr> 
         <%} %>
     </table>
