--- a/views/courseEdit.ejs
+++ b/views/courseEdit.ejs
@@ -38,6 +38,7 @@
     <table class="table table-hover">
         <thead>
             <tr>
+                <th>#</th>
                 <th>Lesson</th>
                 <th>Description</th>
                 <th>Material</th>
@@ -46,12 +47,14 @@
         <tbody>
             <% for(var i=0; i<course.length;i++){ %>
                 <tr>
+                    <td><%= course[i].lessonNumber %></td>
                     <td><button class="btn btn-primary-outline" data-toggle="modal" data-target="#editLesson"><span class="fas fa-edit text-left"></span>  <%= course[i].LESSON_NAME %></td></button> 
                     <td><%= course[i].LESSON_DESCRIPTION %></td>
                     <td><%= course[i].LESSON_MATERIAL %></td>
                 </tr> 
             <%} %>
             <tr>
+                <td></td>
                 <td></td>
                 <td></td>
                 <td><button class="btn btn-primary" data-toggle="modal" data-target="#createLesson" >Create Lesson</button></td>
@@ -112,16 +115,24 @@
                 </div>
                 <div class="modal-body">
 
-                    <form action="#" method="post">
+                    <form action="/course/<%= course[0].courseName %>/editLesson" method="post">
                         <div class="form-group">
-                            <label>Lesson Name</label><br>
-                            <input type="text" class="form-control" name="lessonName">
+                            <label>Number</label><br>
+                            <input type="text" class="form-control" name="lessonNumber">
                         </div>
                         <div class="form-group">
-                            <label>Course Description</label><br>
-                            <textarea  name="lessonDescription" class="w-100"> </textarea>
+                            <label>Name</label><br>
+                            <input type="text" class="form-control" name="LESSON_NAME">
                         </div>
-                        <button type="submit" class="btn btn-warning btn-lg w-100">Save</button>
+                        <div class="form-group">
+                            <label>Description</label><br>
+                            <textarea  name="LESSON_DESCRIPTION" class="w-100"> </textarea>
+                        </div>
+                        <div class="form-group">
+                            <label>Material</label><br>
+                            <input type="text" class="form-control" name="LESSON_MATERIAL">
+                        </div>
+                        <button type="submit" class="btn btn-warning btn-lg w-100">Create</button>
                     </form>
                     
                 </div>
