--- a/views/courseEdit.ejs
+++ b/views/courseEdit.ejs
@@ -22,7 +22,10 @@
 				<li class="nav-item active">
 						<a class="nav-link" href="/profile">Profile <span class="sr-only">(current)</span></a>
 				</li>
-			</ul>
+                <li class="nav-item">
+                        <a class="nav-link" href="/course/<%= course[0].courseName %>/gradebook"> Gradebook<span class="sr-only">(current)</span></a>
+                </li>
+            </ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="/logout"><span class="fas fa-sign-out-alt "></span> Logout</a></li>
 			</ul>
