--- a/views/gradebook.ejs
+++ b/views/gradebook.ejs
@@ -1,37 +1,66 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 <head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<title>TestV2</title>
+    <script src="/scripts/jquery-3.2.1.min.js"></script>
+	<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css"> <!-- load bootstrap css -->
+	<link rel="stylesheet" href="/fonts/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css"><!-- load fontawesome -->
+    
+    <script src="/bootstrap/js/bootstrap.min.js"></script>
+    <link rel="icon" href="images/raspberry.png" type="image/png">
 </head>
 <body>
 
-<div class="container">
-    <!-- show any messages that come back with authentication -->
-    <% if (message.length > 0) { %>
-    <div class="alert alert-info"><%= message %></div>
-    <% } %>
+    <!-- navbar -->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light">
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item ">
+						<a class="nav-link" href="/profile">Profile<span class="sr-only">(current)</span></a>
+				</li>
+                <li class="nav-item ">
+                        <a class="nav-link" href="/course/<%= courseName %>"> Course<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item active">
+                        <a class="nav-link" href="/course/<%= courseName %>/gradebook"> Gradebook<span class="sr-only">(current)</span></a>
+                </li>
+            </ul>
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="/logout"><span class="fas fa-sign-out-alt "></span> Logout</a></li>
+			</ul>
+		</div>
+	</nav>
 
-        <!-- table -->
-        <table class="table">
-            <tr>
-                <th>Assignment</th>
-                <th>Mark</th>
-                <th>Total</th>
-            </tr>
-            <% for(var i=0; i<marks.length;i++){ %>
-                <tr>
-                    <td><%= marks[i].ASSESSMENT_NAME %></td>
-                    <td><%= marks[i].MARK_SCORE %></td>
-                    <td><%= marks[i].ASSESSMENT_MAX_MARK %></td>
-                </tr> 
-            <%} %>
-        </table>
-</div>
+    <div class="page-header text-center">
+        <h1><%= courseName %></h1>
+    </div>
 
+    <!-- table -->
+    <div class="container">
+            <!-- show any messages that come back with authentication -->
+            <% if (message.length > 0) { %>
+            <div class="alert alert-info"><%= message %></div>
+            <% } %>
+        
+                <!-- table -->
+                <table class="table">
+                    <tr>
+                        <th>Assignment</th>
+                        <th>Mark</th>
+                        <th>Total</th>
+                    </tr>
+                    <% for(var i=0; i<marks.length;i++){ %>
+                        <tr>
+                            <td><%= marks[i].ASSESSMENT_NAME %></td>
+                            <td><%= marks[i].MARK_SCORE %></td>
+                            <td><%= marks[i].ASSESSMENT_MAX_MARK %></td>
+                        </tr> 
+                    <%} %>
+                </table>
+        </div>
+        
 </body>
 </html>
