--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -3,10 +3,15 @@
 <html>
 <head>
 	<title>TestV2</title>
-	<link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css"> <!-- load bootstrap css -->
-	<link rel="stylesheet" href="/fonts/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css"><!-- load fontawesome -->
-	
-	<link rel="icon" href="images/raspberry.png" type="image/png">
+    <script src="/scripts/jquery-3.2.1.min.js"></script>
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="/fonts/fontawesome/web-fonts-with-css/css/fontawesome-all.min.css">
+    <!-- googly-eyes -->
+    <link rel="stylesheet" href="/styles/googly-eyes.css">
+
+    <link rel="icon" href="images/raspberry.png" type="image/png">
 
 	<style>
 		body 		{ padding-top:20px; }
@@ -14,10 +19,34 @@
 </head>
 <body>
 	
-	<div class="container-fluid text-center" >
-			<h1 class="display-1">Test<strong>V2</strong></h1>
-			<h1><span class="fa fa-sign-in"></span>Register</h1>
-		</div>
+		<section class="move-area">
+                
+				<div class="container-fluid text-center">
+					<h1 class="display-1">Test<strong>V2</strong></h1>
+					<div id='ouBill'>
+						<div class='eye' style="top:105px; left: -14px"></div>
+						<div class='eye' style="top:92px; left: 0px"></div>
+					</div>
+				 
+				<script>
+					$(".move-area").mousemove(function(event) {
+						var eye = $(".eye");
+						var x = (eye.offset().left) + (eye.width() / 2);
+						var y = (eye.offset().top) + (eye.height() / 2);
+						var rad = Math.atan2(event.pageX - x, event.pageY - y);
+						var rot = (rad * (180 / Math.PI) * -1) + 180;
+						eye.css({
+							'-webkit-transform': 'rotate(' + rot + 'deg)',
+							'-moz-transform': 'rotate(' + rot + 'deg)',
+							'-ms-transform': 'rotate(' + rot + 'deg)',
+							'transform': 'rotate(' + rot + 'deg)'
+						});
+					});
+				</script>
+		
+					
+					<h1><span class="fa fa-sign-in"></span>Register</h1>
+				</div>
 	
 		<!-- show any messages that come back with authentication -->
 		<% if (message.length > 0) { %>
@@ -50,6 +79,7 @@
 			</div>
 		</div>
 
+    </section>
 </div>
 </body>
 </html>
