--- a/views/courseEdit.ejs
+++ b/views/courseEdit.ejs
@@ -19,11 +19,17 @@
 		</button>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
-				<li class="nav-item active">
+				<li class="nav-item">
 						<a class="nav-link" href="/profile">Profile <span class="sr-only">(current)</span></a>
 				</li>
+				<li class="nav-item active">
+						<a class="nav-link" href="/course/<%= course[0].courseName %>">Lessons <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item ">
+						<a class="nav-link" href="#">Assignments <span class="sr-only">(current)</span></a>
+				</li>
                 <li class="nav-item">
-                        <a class="nav-link" href="/course/<%= course[0].courseName %>/gradebook"> Gradebook<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/course/<%= course[0].courseName %>/gradebook">Gradebook<span class="sr-only">(current)</span></a>
                 </li>
             </ul>
 			<ul class="nav navbar-nav navbar-right">
