--- a/views/gradebook.ejs
+++ b/views/gradebook.ejs
@@ -21,9 +21,12 @@
 				<li class="nav-item ">
 						<a class="nav-link" href="/profile">Profile<span class="sr-only">(current)</span></a>
 				</li>
-                <li class="nav-item ">
-                        <a class="nav-link" href="/course/<%= courseName %>"> Course<span class="sr-only">(current)</span></a>
-                </li>
+				<li class="nav-item">
+						<a class="nav-link" href="/course/<%= courseName %>">Lessons <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item ">
+						<a class="nav-link" href="#">Assignments <span class="sr-only">(current)</span></a>
+				</li>
                 <li class="nav-item active">
                         <a class="nav-link" href="/course/<%= courseName %>/gradebook"> Gradebook<span class="sr-only">(current)</span></a>
                 </li>
