--- a/views/assessment.ejs
+++ b/views/assessment.ejs
@@ -24,10 +24,10 @@
 				<li class="nav-item">
 						<a class="nav-link" href="/course/<%= courseName %>">Lessons <span class="sr-only">(current)</span></a>
 				</li>
-				<li class="nav-item ">
-						<a class="nav-link" href="/course/<%= ourseName %>/assessment">Assessments <span class="sr-only">(current)</span></a>
+				<li class="nav-item active">
+						<a class="nav-link" href="#">Assignments <span class="sr-only">(current)</span></a>
 				</li>
-                <li class="nav-item active">
+                <li class="nav-item ">
                         <a class="nav-link" href="/course/<%= courseName %>/gradebook"> Gradebook<span class="sr-only">(current)</span></a>
                 </li>
             </ul>
@@ -43,23 +43,19 @@
 
     <!-- table -->
     <div class="container">
-            <!-- show any messages that come back with authentication -->
-            <% if (message.length > 0) { %>
-            <div class="alert alert-info"><%= message %></div>
-            <% } %>
         
                 <!-- table -->
                 <table class="table">
                     <tr>
-                        <th>Assignment</th>
-                        <th>Mark</th>
-                        <th>Total</th>
+                        <th>Name</th>
+                        <th>Description</th>
+                        <th>Maximum Marks</th>
                     </tr>
-                    <% for(var i=0; i<marks.length;i++){ %>
+                    <% for(var i=0; i<availibleAssessments.length;i++){ %>
                         <tr>
-                            <td><%= marks[i].ASSESSMENT_NAME %></td>
-                            <td><%= marks[i].MARK_SCORE %></td>
-                            <td><%= marks[i].ASSESSMENT_MAX_MARK %></td>
+                            <td><%= availibleAssessments[i].ASSESSMENT_NAME %></td>
+                            <td><%= availibleAssessments[i].ASSESSMENT_DESCRIPTION %></td>
+                            <td><%= availibleAssessments[i].ASSESSMENT_MAX_MARK %></td>
                         </tr> 
                     <%} %>
                 </table>
