--- a/views/courseEdit.ejs
+++ b/views/courseEdit.ejs
@@ -26,7 +26,7 @@
 						<a class="nav-link" href="/course/<%= course[0].courseName %>">Lessons <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item ">
-						<a class="nav-link" href="#">Assignments <span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="/course/<%= course[0].courseName %>/assessment">Assessments <span class="sr-only">(current)</span></a>
 				</li>
                 <li class="nav-item">
                         <a class="nav-link" href="/course/<%= course[0].courseName %>/gradebook">Gradebook<span class="sr-only">(current)</span></a>
