--- a/views/assessment.ejs
+++ b/views/assessment.ejs
@@ -25,7 +25,7 @@
 						<a class="nav-link" href="/course/<%= courseName %>">Lessons <span class="sr-only">(current)</span></a>
 				</li>
 				<li class="nav-item active">
-						<a class="nav-link" href="#">Assignments <span class="sr-only">(current)</span></a>
+						<a class="nav-link" href="#">Assessments <span class="sr-only">(current)</span></a>
 				</li>
                 <li class="nav-item ">
                         <a class="nav-link" href="/course/<%= courseName %>/gradebook"> Gradebook<span class="sr-only">(current)</span></a>
