--- a/views/gradebook.ejs
+++ b/views/gradebook.ejs
@@ -53,15 +53,15 @@
                 <!-- table -->
                 <table class="table">
                     <tr>
-                        <th>Assignment</th>
+                        <th>Student</th>
+                        <th>Assessment Name</th>
                         <th>Mark</th>
-                        <th>Total</th>
                     </tr>
                     <% for(var i=0; i<marks.length;i++){ %>
                         <tr>
+                            <td><%= marks[i].username %></td>
                             <td><%= marks[i].ASSESSMENT_NAME %></td>
                             <td><%= marks[i].MARK_SCORE %></td>
-                            <td><%= marks[i].ASSESSMENT_MAX_MARK %></td>
                         </tr> 
                     <%} %>
                 </table>
