--- a/views/courseEdit.ejs
+++ b/views/courseEdit.ejs
@@ -44,6 +44,7 @@
     </div>
 
     <!-- table -->
+    <div class="containter" style="padding: 0px 50px">
     <table class="table table-hover">
         <thead>
             <tr>
@@ -73,6 +74,7 @@
             </tr> 
         </tbody>
     </table>
+    </div>
 
     <!-- Create Lesson Modal -->
     <div class="modal fade" id="createLesson" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
